--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -77,11 +77,12 @@ html[xmlns] .clearfix {
  Site styles
  --------------------------*/
 body{
-	background: @bgcolor;
+	background: @bgcolor url(../img/talent_bg.jpg) no-repeat center bottom;
 	color: @appcolor;
 	font-family: @appfont,sans-serif;
 	font-size: 100%;
 	line-height: 1.5;
+	min-height: 700px;
 }
 section#content{
 	width: @appwidth;
@@ -151,4 +152,29 @@ section#student_photos{
 			}
 		}
 	}
+}
+header#header{
+	width: @appwidth;
+	margin: 0px auto;
+	nav{
+		margin-top: 80px;
+		background: url(../img/head_repeat.png) repeat-x;
+		p{
+			color: white;
+			strong{
+				font-weight: bold;
+				font-size: 1.5em;
+				color: #f3ef8d !important;
+			}
+		}
+	}
+	a.logo{
+		position: relative;
+		top: -70px;
+		display: block;
+		background: url(../img/kaplan_talent_logo.png) no-repeat;
+		height: 279px;
+		width: 267px;
+	}
+
 }
